--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-html, body: {
-    height: 100%;
+p {
+  color: black;
+  width: 500px;
+  font-family: Rockwell Extra Bold;
+}
+
+body {
+    background-color: LightSteelBlue
 }
